--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+ .navbar{
+   display: flex;
+   justify-content: space-between;
+   padding: 10px 10px;
+ }
+
+ .navbar a{
+   text-decoration: none;
+   font-size: 1.5em;
+   color: rgb(47, 47, 47);
+ }
