--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -1,3 +1,56 @@
 // Place all the styles related to the Flats controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.row{
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 20px;
+}
+
+.column_one, .column_two{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 10px;
+}
+
+
+.container{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.container a{
+  text-decoration: none;
+  color: #272727;
+  font-size: 0.8em;
+
+}
+
+.flat-card{
+  width: 250px;
+  background-color: rgb(218, 218, 218);
+  margin: 2em;
+  padding: 10px 10px;
+  box-shadow: 5px 10px 10px rgba($color: #000000, $alpha: 0.2) ;
+}
+
+.icons{
+  display: flex;
+  align-items: center;
+}
+
+.incons_stuff{
+  margin: 5px 5px;
+}
+
+.flat_container, .flat_description{
+  background-color:#e7e7e7 ;
+  padding: 0.5em 0.5em;
+  margin-bottom: 20px;
+}
+
+.flat_description{
+  height: 60vh;
+}
